--- a/app/index.html
+++ b/app/index.html
@@ -132,7 +132,7 @@
         <p>Worldwide. 24/7. Simple. Private.</p>
       </div>
       <div class="registration__registrationSide">
-        <div class="signIn"></div>
+        <a class="signIn" href="#"></a>
       </div>
     </div>
   </div>
