--- a/app/index.html
+++ b/app/index.html
@@ -134,14 +134,14 @@
       <div class="registration__registrationSide" id="block2">
         <nav>
           <div class="nav nav-tabs" id="nav-tab" role="tablist">
-            <a class="nav-item nav-link active" id="nignIn-tab" data-toggle="tab" href="#nignIn" role="tab"
-              aria-controls="nignIn" aria-selected="true">Вход</a>
+            <a class="nav-item nav-link active" id="signIn-tab" data-toggle="tab" href="#signIn" role="tab"
+              aria-controls="signIn" aria-selected="true">Вход</a>
             <a class="nav-item nav-link" id="registration-tab" data-toggle="tab" href="#registration" role="tab"
               aria-controls="registration" aria-selected="false">Регистрация</a>
           </div>
         </nav>
         <div class="tab-content" id="nav-tabContent">
-          <div class="tab-pane fade show active" id="nignIn" role="tabpanel" aria-labelledby="nignIn-tab">
+          <div class="tab-pane fade show active" id="signIn" role="tabpanel" aria-labelledby="signIn-tab">
             <form>
               <div class="registration__inputWrap">
                 <label for="E-mail">E-mail</label>
