--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,8 @@
   <!-- Place favicon.ico in the root directory -->
   <!-- build:css styles/main.css -->
   <link rel="stylesheet" href="styles/main.css">
-  <link href="node_modules/ilyabirman-likely/release/likely.css" rel="stylesheet">
+  <link rel="stylesheet" href="node_modules/ilyabirman-likely/release/likely.css" rel="stylesheet">
+  <link rel="stylesheet" href="/node_modules/jquery.mmenu/dist/jquery.mmenu.all.css">
   <!-- endbuild -->
 
   <!-- build:js scripts/vendor/modernizr.js -->
@@ -29,56 +30,67 @@
 
 
   <!-- mainWrap -->
+  <div class="mmenu-nav"></div>
   <div class="mainWrap">
 
     <!-- contentWrap -->
     <div class="contentWrap">
-
+      <div class="hamburger">
+        <span class="hamburger__line"></span>
+        <span class="hamburger__line"></span>
+        <span class="hamburger__line"></span>
+      </div>
       <!-- header -->
       <div class="header">
         <div class="container">
-          <div class="header__navWrap">
-            <div class="header__logo">
-              <a href="#">Ishu Info</a>
+          <div class="row header__navWrap">
+            <div class="col-lg-2 col-sm-6 col-5">
+              <div class="header__logo">
+                <a href="#">Ishu Info</a>
+              </div>
             </div>
-            <div class="header__mnu">
-              <ul class="header__mnuFirstLvl">
-                <li><a href="#">Авто</a></li>
-                <li><a href="#">Медицина</a></li>
-                <li><a href="#">Все для дома</a></li>
-                <li><a href="#">Безопастность</a></li>
-                <li><a href="#">Ремонт</a></li>
-                <li><a href="#">Еще <i class="fal fa-angle-down arrowTrigger-js"></i></a>
-                  <ul class="header__mnuSecondLvl dropMnu-js">
-                    <li><a href="#">Юридические</a></li>
-                    <li><a href="#">Бухгалтерия</a></li>
-                    <li><a href="#">Обустройство и ремонт</a></li>
-                    <li><a href="#">Торжества</a></li>
-                    <li><a href="#">Финансы</a></li>
-                    <li><a href="#">Полиграфия и реклама</a></li>
-                    <li><a href="#">Красота и здоровье</a></li>
-                    <li><a href="#">Образование</a></li>
-                    <li><a href="#">Языковые переводы</a></li>
-                    <li><a href="#">Гостиницы и сауны</a></li>
-                    <li><a href="#">Путешествия</a></li>
-                    <li><a href="#">Досуг</a></li>
-                    <li><a href="#">Интернет</a></li>
-                    <li><a href="#">Транспортные переводы</a></li>
-                    <li><a href="#">Благоустроство и дизайн</a></li>
-                    <li><a href="#">Животные</a></li>
-                    <li><a href="#">Работы</a></li>
-                  </ul>
-                </li>
-              </ul>
+            <div class="col-lg-2 col-sm-6 col order-lg-last">
+              <div class="autorization">
+                <a href="#" class="autorization__link registration-js">Войти</a>
+                <a href="#" class="autorization__profile registration-js">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="30" height="37" viewBox="0 0 26 34" fill="none">
+                    <path d="M7.0476 25.36L1.08005 28.6151C0.729862 28.806 0.415145 29.0407 0.122314 29.2966C3.60156 32.2302 8.09288 34 13.0001 34C17.871 34 22.3336 32.2566 25.8031 29.363C25.4831 29.0928 25.1359 28.8498 24.751 28.6581L18.3608 25.4634C17.5351 25.0506 17.0136 24.2068 17.0136 23.2838V20.7766C17.1933 20.5721 17.3985 20.3094 17.6182 19.9992C18.4891 18.769 19.148 17.4158 19.6046 15.9962C20.4242 15.7434 21.028 14.9864 21.028 14.0868V11.4106C21.028 10.8219 20.7661 10.2958 20.3593 9.92754V6.05886C20.3593 6.05886 21.154 0.0384827 13.0008 0.0384827C4.8476 0.0384827 5.64231 6.05886 5.64231 6.05886V9.92754C5.23477 10.2958 4.97363 10.8219 4.97363 11.4106V14.0868C4.97363 14.7917 5.3442 15.4121 5.89892 15.7706C6.5676 18.6815 8.31854 20.7766 8.31854 20.7766V23.2219C8.31779 24.1124 7.83024 24.9328 7.0476 25.36Z"
+                      fill="#E7ECED" />
+                  </svg>
+                </a>
+              </div>
             </div>
-            <div class="autorization">
-              <a href="#" class="autorization__link registration-js">Войти</a>
-              <a href="#" class="autorization__profile registration-js">
-                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="37" viewBox="0 0 26 34" fill="none">
-                  <path d="M7.0476 25.36L1.08005 28.6151C0.729862 28.806 0.415145 29.0407 0.122314 29.2966C3.60156 32.2302 8.09288 34 13.0001 34C17.871 34 22.3336 32.2566 25.8031 29.363C25.4831 29.0928 25.1359 28.8498 24.751 28.6581L18.3608 25.4634C17.5351 25.0506 17.0136 24.2068 17.0136 23.2838V20.7766C17.1933 20.5721 17.3985 20.3094 17.6182 19.9992C18.4891 18.769 19.148 17.4158 19.6046 15.9962C20.4242 15.7434 21.028 14.9864 21.028 14.0868V11.4106C21.028 10.8219 20.7661 10.2958 20.3593 9.92754V6.05886C20.3593 6.05886 21.154 0.0384827 13.0008 0.0384827C4.8476 0.0384827 5.64231 6.05886 5.64231 6.05886V9.92754C5.23477 10.2958 4.97363 10.8219 4.97363 11.4106V14.0868C4.97363 14.7917 5.3442 15.4121 5.89892 15.7706C6.5676 18.6815 8.31854 20.7766 8.31854 20.7766V23.2219C8.31779 24.1124 7.83024 24.9328 7.0476 25.36Z"
-                    fill="#E7ECED" />
-                </svg>
-              </a>
+            <div class="col-lg-8">
+              <div class="header__mnu">
+                <ul class="header__mnuFirstLvl">
+                  <li><a href="#">Авто</a></li>
+                  <li><a href="#">Медицина</a></li>
+                  <li><a href="#">Все для дома</a></li>
+                  <li><a href="#">Безопастность</a></li>
+                  <li><a href="#">Ремонт</a></li>
+                  <li><a href="#">Еще <i class="fal fa-angle-down arrowTrigger-js"></i></a>
+                    <ul class="header__mnuSecondLvl dropMnu-js">
+                      <li><a href="#">Юридические</a></li>
+                      <li><a href="#">Бухгалтерия</a></li>
+                      <li><a href="#">Обустройство и ремонт</a></li>
+                      <li><a href="#">Торжества</a></li>
+                      <li><a href="#">Финансы</a></li>
+                      <li><a href="#">Полиграфия и реклама</a></li>
+                      <li><a href="#">Красота и здоровье</a></li>
+                      <li><a href="#">Образование</a></li>
+                      <li><a href="#">Языковые переводы</a></li>
+                      <li><a href="#">Гостиницы и сауны</a></li>
+                      <li><a href="#">Путешествия</a></li>
+                      <li><a href="#">Досуг</a></li>
+                      <li><a href="#">Интернет</a></li>
+                      <li><a href="#">Транспортные переводы</a></li>
+                      <li><a href="#">Благоустроство и дизайн</a></li>
+                      <li><a href="#">Животные</a></li>
+                      <li><a href="#">Работы</a></li>
+                    </ul>
+                  </li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
@@ -108,7 +120,11 @@
 
     <!-- add -->
     <div class="add">
-
+      <div class="add__mainAdds">
+        <div class="row">
+          a.add__item
+        </div>
+      </div>
     </div>
     <!-- add end -->
 
@@ -118,6 +134,9 @@
       footer
     </div>
     <!-- footer end -->
+
+
+
 
   </div>
   <!-- mainWrap end -->
@@ -220,7 +239,8 @@
 
   <script type="text/javascript" src="/node_modules/jquery/dist/jquery.min.js"></script>
   <script type="text/javascript" src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-  <script src="node_modules/ilyabirman-likely/release/likely.js"></script>
+  <script src="/node_modules/ilyabirman-likely/release/likely.js"></script>
+  <script src="/node_modules/jquery.mmenu/dist/jquery.mmenu.all.js"></script>
   <!-- endbuild -->
   <!-- build:js scripts/main.js -->
   <script src="scripts/main.js"></script>
