--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,6 @@
   <!-- Place favicon.ico in the root directory -->
   <!-- build:css styles/main.css -->
   <link rel="stylesheet" href="styles/main.css">
-  <link rel="stylesheet" href="node_modules/ilyabirman-likely/release/likely.css" rel="stylesheet">
   <link rel="stylesheet" href="/node_modules/jquery.mmenu/dist/jquery.mmenu.all.css">
   <!-- endbuild -->
 
@@ -115,18 +114,168 @@
       </div>
       <!-- filter end -->
 
+      <!-- add -->
+      <div class="ad">
+        <div class="container">
+          <div class="captionWrap">
+            <h2 class="caption">VIP обьявления</h2>
+          </div>
+          <div class="row">
+            <div class="col-md-10">
+
+              <div class="mainAdv">
+                <div class="row">
+                  <div class="col-md-4">
+                    <div class="ad__items ad__items--indentItem">
+                      <a href="#" class="ad__img">
+                        <div class="ad__tagged">
+                          <img src="images/bookmark.png" alt="">
+                        </div>
+                        <img src="images/Mask Group-1.jpg" alt="">
+                        <div class="ad__discount">
+                          <h3>СКИДКА</h3>
+                          <p>30%</p>
+                        </div>
+                      </a>
+                      <div class="ad__desc">
+                        <a href="#" class="ad__itemCaption">Аренда авто</a>
+                        <p class="ad__price"><span> 2 000 с.</span>1 500 c.</p>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="col-md-4">
+                    <div class="ad__items">
+                      <a href="#" class="ad__img">
+                        <img src="images/Mask Group-2.jpg" alt="">
+                        <div class="ad__discount">
+                          <h3>СКИДКА</h3>
+                          <p>25%</p>
+                        </div>
+                      </a>
+                      <div class="ad__desc">
+                        <a href="#" class="ad__itemCaption">Ремонт ванной под ключ</a>
+                        <p class="ad__price">25 000 с.</p>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="col-md-4">
+                    <div class="ad__items">
+                      <a href="#" class="ad__img">
+                        <img src="images/Mask Group-1.jpg" alt="">
+                        <div class="ad__discount">
+                          <h3>СКИДКА</h3>
+                          <p>25%</p>
+                        </div>
+                      </a>
+                      <div class="ad__desc">
+                        <a href="#" class="ad__itemCaption">Бурение скважин на воду</a>
+                        <p class="ad__price">1 700 с.</p>
+                      </div>
+                    </div>
+                  </div>
+
+                </div>
+              </div>
+
+
+              <div class="captionWrap">
+                <h2 class="caption">Новые объявления</h2>
+              </div>
+
+
+              <div class="secondaryAdv">
+                <div class="row">
+
+                  <div class="col-md-3">
+                    <div class="ad__items ad__items--indentItem">
+                      <a href="#" class="ad__img">
+                        <div class="ad__tagged">
+                          <img src="images/bookmark.png" alt="">
+                        </div>
+                        <img src="images/Mask Group-5.jpg" alt="">
+                        <div class="ad__discount">
+                          <h3>СКИДКА</h3>
+                          <p>30%</p>
+                        </div>
+                      </a>
+                      <div class="ad__desc">
+                        <a href="#" class="ad__itemCaption">Эвакуатор 24 часа</a>
+                        <p class="ad__price"><span> 3 500 с.</span>2 500 c.</p>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="col-md-3">
+                    <div class="ad__items">
+                      <a href="#" class="ad__img">
+                        <img src="images/Mask Group-6.jpg" alt="">
+                        <div class="ad__discount">
+                          <h3>СКИДКА</h3>
+                          <p>30%</p>
+                        </div>
+                      </a>
+                      <div class="ad__desc">
+                        <a href="#" class="ad__itemCaption">Спил, обрезка деревьев</a>
+                        <p class="ad__price">Цена не указана</p>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="col-md-3">
+                    <div class="ad__items">
+                      <a href="#" class="ad__img">
+                        <img src="images/Mask Group-7.jpg" alt="">
+                        <div class="ad__discount">
+                          <h3>СКИДКА</h3>
+                          <p>30%</p>
+                        </div>
+                      </a>
+                      <div class="ad__desc">
+                        <a href="#" class="ad__itemCaption">Бассейны, сервисное обслуживание</a>
+                        <p class="ad__price">Договорная</p>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="col-md-3">
+                    <div class="ad__items">
+                      <a href="#" class="ad__img">
+                        <img src="images/Mask Group-4.jpg" alt="">
+                        <div class="ad__discount">
+                          <h3>СКИДКА</h3>
+                          <p>30%</p>
+                        </div>
+                      </a>
+                      <div class="ad__desc">
+                        <a href="#" class="ad__itemCaption">Все виды работ по ремонту компьютеров</a>
+                        <p class="ad__price">Договорная</p>
+                      </div>
+                    </div>
+                  </div>
+
+                </div>
+              </div>
+
+            </div>
+            <div class="col-md-2">
+              <div class="ad__banner">
+                <img src="images/Mask Group.jpg" alt="">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+      <!-- add end -->
+
+
     </div>
     <!-- contentWrap end -->
 
-    <!-- add -->
-    <div class="add">
-      <div class="add__mainAdds">
-        <div class="row">
-          a.add__item
-        </div>
-      </div>
-    </div>
-    <!-- add end -->
+
 
 
     <!-- footer -->
