--- a/app/index.html
+++ b/app/index.html
@@ -121,7 +121,7 @@
             <h2 class="caption">VIP обьявления</h2>
           </div>
           <div class="row">
-            <div class="col-md-10">
+            <div class="col-lg-10 col-md-9">
 
               <div class="mainAdv">
                 <div class="row">
@@ -188,7 +188,7 @@
               <div class="secondaryAdv">
                 <div class="row">
 
-                  <div class="col-md-3">
+                  <div class="col-lg-3 col-md-6 col-6">
                     <div class="ad__items ad__items--indentItem">
                       <a href="#" class="ad__img">
                         <div class="ad__tagged">
@@ -207,7 +207,7 @@
                     </div>
                   </div>
 
-                  <div class="col-md-3">
+                  <div class="col-lg-3 col-md-6 col-6">
                     <div class="ad__items">
                       <a href="#" class="ad__img">
                         <img src="images/Mask Group-6.jpg" alt="">
@@ -223,7 +223,7 @@
                     </div>
                   </div>
 
-                  <div class="col-md-3">
+                  <div class="col-lg-3 col-md-6 col-6">
                     <div class="ad__items">
                       <a href="#" class="ad__img">
                         <img src="images/Mask Group-7.jpg" alt="">
@@ -239,7 +239,7 @@
                     </div>
                   </div>
 
-                  <div class="col-md-3">
+                  <div class="col-lg-3 col-md-6 col-6">
                     <div class="ad__items">
                       <a href="#" class="ad__img">
                         <img src="images/Mask Group-4.jpg" alt="">
@@ -259,7 +259,7 @@
               </div>
 
             </div>
-            <div class="col-md-2">
+            <div class="col-lg-2 col-md-3">
               <div class="ad__banner">
                 <img src="images/Mask Group.jpg" alt="">
               </div>
@@ -280,7 +280,16 @@
 
     <!-- footer -->
     <div class="footer">
-      footer
+      <div class="footer__wrap">
+        <div class="container">
+          <ul class="footer__nav">
+            <li><a href="#">О проекте</a></li>
+            <li><a href="#">Вопрос - ответ</a></li>
+            <li><a href="#">Партнерам</a></li>
+            <li><a href="#">Контакты</a></li>
+          </ul>
+        </div>
+      </div>
     </div>
     <!-- footer end -->
 
@@ -362,6 +371,25 @@
       </div>
     </div>
   </div>
+
+  <!-- done -->
+  <div class="done blurEffect blurEffect--blurEffectDone">
+    <div class="done__wrap">
+      <div class="done__window">
+        <div class="closeBtn"><i class="fal fa-times"></i></div>
+        <div class="done__img">
+          <img src="images/emoji.png" alt="">
+        </div>
+
+        <p>Спасибо! <br> Ваш заказ размещен. <br> С вами свяжуться лучшие исполнители <br> по номеру телефона: <br>
+          +996 555
+          89 39 54</p>
+        <div class="btn">отлично</div>
+      </div>
+    </div>
+  </div>
+  <!-- done end -->
+
   <!-- modal windows end -->
 
 
