--- a/app/index.html
+++ b/app/index.html
@@ -43,12 +43,12 @@
       <div class="header">
         <div class="container">
           <div class="row header__navWrap">
-            <div class="col-lg-2 col-sm-6 col-5">
+            <div class="col-lg-2 col-sm-6">
               <div class="header__logo">
                 <a href="#">Ishu Info</a>
               </div>
             </div>
-            <div class="col-lg-2 col-sm-6 col order-lg-last">
+            <div class="col-lg-3 col-sm-6 order-lg-last">
               <div class="autorization">
                 <a href="#" class="autorization__link registration-js">Войти</a>
                 <a href="#" class="autorization__profile registration-js">
@@ -59,7 +59,7 @@
                 </a>
               </div>
             </div>
-            <div class="col-lg-8">
+            <div class="col-lg-7">
               <div class="header__mnu">
                 <ul class="header__mnuFirstLvl">
                   <li><a href="#">Авто</a></li>
@@ -301,7 +301,7 @@
 
 
   <!-- modal windows  -->
-  <div class="registration blurEffect">
+  <div id="autorization" class="registration blurEffect">
     <div class="registration__modalWindow">
       <div class="closeBtn"><i class="fal fa-times"></i></div>
       <div class="registration__logoSide" id="block1">
@@ -373,8 +373,9 @@
   </div>
 
   <!-- done -->
-  <div class="done blurEffect blurEffect--blurEffectDone">
+  <div id="done" class="done blurEffect">
     <div class="done__wrap">
+      
       <div class="done__window">
         <div class="closeBtn"><i class="fal fa-times"></i></div>
         <div class="done__img">
